ci_issue/NetworkPolicy/cirros-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: cirros-pod-1
  namespace: default
  labels:
    app: cir-allow
spec:
  containers:
  - image: cirros
    name: cirros-container-1

---
apiVersion: v1
kind: Pod
metadata:
  name: cirros-pod-2
  namespace: default
  labels:
    app: cir-not-allow
spec:
  containers:
  - image: cirros
    name: cirros-container-2
