ci_issue/NetworkPolicy/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: pol-test
  name: nginx-pod-1
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx-container-1
    ports:
    - containerPort: 80
      protocol: TCP
