ci_issue/NetworkPolicy/policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: def-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pol-test
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cir-allow
